# vim-vividchalk

./: CMakeLists.txt
colors/: vividchalk.vim
